welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:3: error: not found: value Maths
	else if ( a % 5 == b % 5 ) return Maths.min(a,b)
                                          ^